add build and deploy config

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "scripts": {
-        "dev": "bun run --hot src/index.tsx"
+        "dev": "bun run --hot src/index.tsx",
+        "build": "bun build src/index.tsx --outdir build"
     },
     "dependencies": {
         "@supabase/ssr": "^0.0.10",
-        "@supabase/supabase-js": "^2.39.0",
         "hono": "^3.10.3"
     },
     "devDependencies": {
